# KleiKodeshProject

./: .gitignore  .gitmodules  Feats.txt  KleiKodeshProject.slnx  README.md  rebuild-all.ps1  todo.txt
.notes/: about-window-implementation.md  classes-vs-functions-deep-dive.md  codebase-analysis-vs-user-preferences.md  sql-queries-deduplication.md  vue-zayit-complexity-analysis.md  when-to-use-classes-in-typescript.md
.steering/: PDFJS-MODIFICATIONS.md  README.md  build_installer-system.md  build_vsto-automation.md  build_vue-config.md  core_build.md  core_communication.md  core_development.md  core_offline.md  csharp_framework-version.md  csharp_patterns.md  general_build-requirements.md  general_coding-standards.md  general_documentation-policy.md  general_guidelines.md  installer_system.md  integration_communication.md  integration_json-handling.md  integration_vsto-webview.md  integration_webview-dialogs.md  project_installer-details.md  project_regexfind-build.md  project_regexfind-color.md  project_regexfind-word-theme-colors.md  project_update-system.md  project_zayit-bridge.md  project_zayit-hebrewbooks.md  project_zayit-pdf.md  project_zayit-reading-backgrounds.md  project_zayit-wrapper.md  ui_html-principles.md  ui_javascript-standards.md  ui_theming-system.md  ui_vue-styling.md  update_system.md  vue_development.md  vue_dropdown-click-handling.md  vue_theming.md  webview_dialogs.md  (+10 more)
vue-zayit/Zayit-master/installer/: Cargo.toml  build.cmd  build.rs
vue-zayit/Zayit-master/installer/resources/: app.manifest
vue-zayit/Zayit-master/installer/src/: main.rs
(+3489 files in other folders)
