[package]
name = "zayit-installer"
version = "1.0.0"
edition = "2021"
description = "Silent installer for Zayit application"
authors = ["KDroidFilter"]

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Globalization",
] }

# Image decoding
image = { version = "0.25", default-features = false, features = ["png"] }

# For finding user directories
dirs = "5.0"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "zayit-installer"
path = "src/main.rs"
